--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,18 @@ buildscript {
             url 'https://dl.bintray.com/cuba-platform/main'
 
         }
+
+        maven {
+            url 'trial_repository'
+        }
+
+        maven {
+            url 'https://cuba-platform.bintray.com/premium'
+            credentials {
+                username(rootProject.hasProperty('bintrayPremiumRepoUser') ? rootProject['bintrayPremiumRepoUser'] : System.getenv('CUBA_PREMIUM_USER'))
+                password(rootProject.hasProperty('premiumRepoPass') ? rootProject['premiumRepoPass'] : System.getenv('CUBA_PREMIUM_PASSWORD'))
+            }
+        }
         jcenter()
 
 
@@ -14,7 +26,7 @@ buildscript {
     }
 }
 
-def modulePrefix = 'app'
+def modulePrefix = 'clinic'
 
 def globalModule = project(":${modulePrefix}-global")
 def coreModule = project(":${modulePrefix}-core")
@@ -37,6 +49,8 @@ dependencies {
     appComponent('com.haulmont.addon.helium:helium-global:0.2.0')
     appComponent("com.haulmont.reports:reports-global:$cubaVersion")
     appComponent("com.haulmont.charts:charts-global:$cubaVersion")
+    appComponent('com.haulmont.addon.bproc:bproc-global:1.1.1')
+    appComponent('com.haulmont.addon.restapi:restapi-global:7.2.0')
 }
 
 def hsql = 'org.hsqldb:hsqldb:2.4.1'
@@ -77,6 +91,13 @@ configure(globalModule) {
     entitiesEnhancing {
         main {
             enabled = true
+        }
+    }
+
+    jar {
+        manifest {
+            attributes('App-Component-Id': cuba.artifact.group)
+            attributes('App-Component-Version': cuba.artifact.version + (cuba.artifact.isSnapshot ? '-SNAPSHOT' : ''))
         }
     }
 }
