--- a/modules/core/src/com/company/clinic/app.properties
+++ b/modules/core/src/com/company/clinic/app.properties
@@ -22,7 +22,7 @@ cuba.anonymousSessionId = 7729c825-b099-6c90-c990-9a85e5ed5990
 #                                  Other                                      #
 ###############################################################################
 
-cuba.webContextName = app-core
+cuba.webContextName = clinic-core
 cuba.availableLocales = English|en
 cuba.localeSelectVisible = false
 
@@ -34,3 +34,5 @@ cuba.dataSource.host = localhost
 cuba.dataSource.port = 9010
 
 reporting.office.path=C:/Progra~1/LibreOffice/program
+cuba.restApiUrl=http://localhost:8080/clinic-portal/api
+cuba.webAppUrl=http://localhost:8080/clinic
