--- a/modules/core/web/WEB-INF/web.xml
+++ b/modules/core/web/WEB-INF/web.xml
@@ -16,7 +16,12 @@
     <!--Application components-->
     <context-param>
         <param-name>appComponents</param-name>
-        <param-value>com.haulmont.cuba com.haulmont.addon.helium com.haulmont.reports com.haulmont.charts</param-value>
+        <param-value>com.haulmont.cuba com.haulmont.addon.helium com.haulmont.reports com.haulmont.charts
+            com.haulmont.addon.bproc com.haulmont.addon.restapi</param-value>
+<!--
+        <param-name>spring.profiles.active</param-name>
+        <param-value>dev</param-value>
+-->
     </context-param>
     <listener>
         <listener-class>com.haulmont.cuba.core.sys.AppContextLoader</listener-class>
