--- a/modules/web/src/com/company/clinic/web-app.properties
+++ b/modules/web/src/com/company/clinic/web-app.properties
@@ -29,14 +29,18 @@ cuba.creditsConfig = +
 ###############################################################################
 
 # Middleware connection
-cuba.connectionUrlList = http://localhost:8080/app-core
+cuba.connectionUrlList = http://localhost:8080/clinic-core
 
 # Set to false if the middleware works on different JVM
 cuba.useLocalServiceInvocation = true
 
-cuba.webContextName = app
+cuba.webContextName = clinic
 cuba.availableLocales = English|en
 cuba.localeSelectVisible = false
 cuba.web.theme = hover
 cuba.web.mainScreenId=extMainScreen
 cuba.web.loginScreenId=login
+cuba.rest.queriesConfig=+com/company/clinic/rest-queries.xml
+cuba.rest.servicesConfig=+com/company/clinic/rest-services.xml
+cuba.restApiUrl=http://localhost:8080/clinic-portal/api
+cuba.webAppUrl=http://localhost:8080/clinic
